# eastat

./: .gitignore  MANIFEST.in  README.md  bench.py  build.sh  build_kernels.sh  eastat.py  generate_test.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
kernels/: csv_layout.ea  csv_parse.ea  csv_scan.ea  csv_scan_arm.ea  csv_stats.ea  csv_stats_arm.ea
src/eastat/: __init__.py  _csv_layout.py  _csv_parse.py  _csv_scan.py  _csv_stats.py  _loader.py  _pipeline.py  cli.py
tests/: test_eastat.py
