[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "eastat"
version = "0.2.0"
description = "CSV column statistics powered by Ea SIMD kernels"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Peter Lukka" }]
keywords = ["csv", "statistics", "simd", "data-analysis", "avx2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.21"]

[project.scripts]
eastat = "eastat.cli:main"

[project.urls]
Homepage = "https://github.com/petlukk/eastat"
Repository = "https://github.com/petlukk/eastat"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eastat = ["lib/*.so", "lib/*.dll", "py.typed"]
